# DINOv3-Object-Detection

./: .gitignore  README.md  detect.py  detect_folder.py  detect_gui.py  example_usage.py  inference.py  production_api.py  pyproject.toml  quick_start.py  run_detector.bat  run_detector.sh  test_simple.py  train.py
dinov3_od/: losses.py  zero_shot_detector.py
dinov3_od/utils/: inference.py  metrics.py  visualization.py
